# SlackVoiceReader

./: README.md
.github/workflows/: publish.yaml
python/: slack_voicevox.py
rust/: .env_sample  .gitignore  Cargo.toml
rust/app_core/: Cargo.toml
rust/app_core/src/: audio.rs  lib.rs  slack.rs  text_processor.rs
rust/core/: Cargo.toml
rust/core/src/: audio.rs  lib.rs
rust/desktop/: package-lock.json  package.json
rust/desktop/.github/: publish.yaml
rust/desktop/src/: App.tsx  DeviceList.module.css  DeviceList.tsx  RunButton.module.css  RunButton.tsx  SettingsForm.module.css  SettingsForm.tsx
rust/desktop/src-tauri/: Cargo.toml  settings.json  tauri.conf.json
rust/desktop/src-tauri/icons/: icon.icns
rust/desktop/src-tauri/src/: error.rs  main.rs
rust/script/: .env_sample  Cargo.toml
rust/script/src/: main.rs
rust/src/: main.rs
