[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
rodio = "0.17.3"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
