[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
anyhow = "1.0.75"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
