[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
anyhow = "1.0.75"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
cpal = "0.15.2"
reqwest = "0.11.22"
env_logger = "0.10.1"
