[package]
name = "desktop"
version = "0.0.0"
description = "Slack APIとVoiceVoxを使った読み上げアプリ"
authors = ["SH11235"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
app_core = { path = "../../app_core" }
cpal = "0.15.2"
reqwest = "0.11.22"
anyhow = "1.0.75"
rodio = "0.17.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
